# 40dex-bot

./: .gitignore  Cross.toml  deploy
bot/: Cargo.toml
bot/src/: bot_utils.rs  commands.rs  handlers.rs  main.rs  utils.rs
bot/src/handlers/: admin.rs  user.rs
bot/src/handlers/internal/: admin.rs  user.rs
database/: Cargo.toml
database/src/: lib.rs  tests.rs
utils/: Cargo.toml
utils/src/: lib.rs
web/: Cargo.toml
web/src/: handlers.rs  main.rs  renderer.rs
web/templates/: 40dex-header.html  40dex-search.html  40dex.html  footer.html  header.html
