[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
dotenvy = "0.15.6"
log = "0.4"
pretty_env_logger = "0.4"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
