[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
tokio = { version = "1.25.0", features = ["macros"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
