[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-utils = "3.0.1"
actix-web = "4.3.0"
actix-web-lab = "0.18.9"
database = { path = "../database" }
dotenvy = "0.15.6"
log = "0.4"
minijinja = { git = "https://github.com/mitsuhiko/minijinja", features = ["source"] }
minijinja-autoreload = { git = "https://github.com/mitsuhiko/minijinja" }
pretty_env_logger = "0.4"
